# bot

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Config.cpp  Config.h  Console.cpp  Github.cpp  Github.h  IRCThread.cpp  IRCThread.h  Mail.cpp  Mail.h  main.cpp
